Properly translate RTCError objects to DOMException or RangeError

RangeErrors are not DOMException and the function we used
to translate them to DOMException couldn't handle anything else.
Using an ExceptionState, we can properly reject the promises with
the right type of exception.

Bug: 849214
Change-Id: I14ad11ba43910a83770d66c6976509c0feba3408
Reviewed-on: https://chromium-review.googlesource.com/1097325
Commit-Queue: Florent Castelli <orphis@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567979}
Former-commit-id: 12b476b0aea248e33d798aa23153e628cbff3f19