third_party/blink/renderer/modules/peerconnection/rtc_session_description_request_promise_impl.h
@@ -19,7 +19,9 @@ class RTCSessionDescriptionRequestPromiseImpl final
  public:
   static RTCSessionDescriptionRequestPromiseImpl* Create(
       RTCPeerConnection*,
-      ScriptPromiseResolver*);
+      ScriptPromiseResolver*,
+      const char* interface_name,
+      const char* property_name);
   ~RTCSessionDescriptionRequestPromiseImpl() override;
 
   // RTCSessionDescriptionRequest
@@ -30,12 +32,16 @@ class RTCSessionDescriptionRequestPromiseImpl final
 
  private:
   RTCSessionDescriptionRequestPromiseImpl(RTCPeerConnection*,
-                                          ScriptPromiseResolver*);
+                                          ScriptPromiseResolver*,
+                                          const char* interface_name,
+                                          const char* property_name);
 
   void Clear();
 
   Member<RTCPeerConnection> requester_;
   Member<ScriptPromiseResolver> resolver_;
+  const char* interface_name_;
+  const char* property_name_;
 };
 
 }  // namespace blink
