third_party/blink/renderer/modules/peerconnection/rtc_void_request_promise_impl.h
@@ -16,7 +16,9 @@ class RTCPeerConnection;
 class RTCVoidRequestPromiseImpl final : public RTCVoidRequest {
  public:
   static RTCVoidRequestPromiseImpl* Create(RTCPeerConnection*,
-                                           ScriptPromiseResolver*);
+                                           ScriptPromiseResolver*,
+                                           const char* interface_name,
+                                           const char* property_name);
   ~RTCVoidRequestPromiseImpl() override;
 
   // RTCVoidRequest
@@ -26,12 +28,17 @@ class RTCVoidRequestPromiseImpl final : public RTCVoidRequest {
   void Trace(blink::Visitor*) override;
 
  private:
-  RTCVoidRequestPromiseImpl(RTCPeerConnection*, ScriptPromiseResolver*);
+  RTCVoidRequestPromiseImpl(RTCPeerConnection*,
+                            ScriptPromiseResolver*,
+                            const char* interface_name,
+                            const char* property_name);
 
   void Clear();
 
   Member<RTCPeerConnection> requester_;
   Member<ScriptPromiseResolver> resolver_;
+  const char* interface_name_;
+  const char* property_name_;
 };
 
 }  // namespace blink
