third_party/blink/renderer/modules/peerconnection/rtc_void_request_script_promise_resolver_impl.cc
@@ -11,14 +11,20 @@
 namespace blink {
 
 RTCVoidRequestScriptPromiseResolverImpl*
-RTCVoidRequestScriptPromiseResolverImpl::Create(
-    ScriptPromiseResolver* resolver) {
-  return new RTCVoidRequestScriptPromiseResolverImpl(resolver);
+RTCVoidRequestScriptPromiseResolverImpl::Create(ScriptPromiseResolver* resolver,
+                                                const char* interface_name,
+                                                const char* property_name) {
+  return new RTCVoidRequestScriptPromiseResolverImpl(resolver, interface_name,
+                                                     property_name);
 }
 
 RTCVoidRequestScriptPromiseResolverImpl::
-    RTCVoidRequestScriptPromiseResolverImpl(ScriptPromiseResolver* resolver)
-    : resolver_(resolver) {
+    RTCVoidRequestScriptPromiseResolverImpl(ScriptPromiseResolver* resolver,
+                                            const char* interface_name,
+                                            const char* property_name)
+    : resolver_(resolver),
+      interface_name_(interface_name),
+      property_name_(property_name) {
   DCHECK(resolver_);
 }
 
@@ -31,7 +37,12 @@ void RTCVoidRequestScriptPromiseResolverImpl::RequestSucceeded() {
 
 void RTCVoidRequestScriptPromiseResolverImpl::RequestFailed(
     const webrtc::RTCError& error) {
-  resolver_->Reject(CreateDOMExceptionFromRTCError(error));
+  ScriptState::Scope scope(resolver_->GetScriptState());
+  ExceptionState exception_state(resolver_->GetScriptState()->GetIsolate(),
+                                 ExceptionState::kExecutionContext,
+                                 interface_name_, property_name_);
+  ThrowExceptionFromRTCError(error, exception_state);
+  resolver_->Reject(exception_state);
 }
 
 void RTCVoidRequestScriptPromiseResolverImpl::Trace(blink::Visitor* visitor) {
